# Keep this in sync with meson.build
module(
    name = "libhoth",
    version = "0.0.0",
)

# libusb is not yet available in the Bazel Central Registry
# (https://registry.bazel.build/).

libusb_ext = use_extension("//:libusb_extension.bzl", "libusb_extension")
use_repo(libusb_ext, "libusb")

bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "rules_cc", version = "0.1.4")
